--- a/belgrade_trip.html
+++ b/belgrade_trip.html
@@ -5,7 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Belgrade Boys Trip · Retro 90s Slav Vibe</title>
 <meta name="description" content="Offline itinerary web app, retro 90s Slavic web vibes, tuned for phones." />
-<style>
+<meta name="theme-color" content="#330000">
+<link rel="manifest" href="manifest.webmanifest">
+<link rel="icon" href="icon-192.png" sizes="192x192">
+<link rel="apple-touch-icon" href="icon-192.png">
+
+  <style>
 /* === SLAVIC RETRO 90s VIBES, MOBILE-FIRST === */
 html,body{margin:0;padding:0;background:#000;color:#fff;font-family:"Arial Black", Impact, sans-serif;}
 body{background-image: radial-gradient(circle at 50% 10%, rgba(255,0,0,.15), rgba(0,0,0,0) 40%);}
@@ -81,6 +86,12 @@ body{background-image: radial-gradient(circle at 50% 10%, rgba(255,0,0,.15), rgb
 
 <script>
   // Register service worker for PWA offline cache
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('./sw.js').catch(console.error);
+  });
+}
+// Register service worker for PWA offline cache
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
     navigator.serviceWorker.register('./sw.js').catch(console.error);
