--- a/belgrade_trip.html
+++ b/belgrade_trip.html
@@ -5,12 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Belgrade Boys Trip · Retro 90s Slav Vibe</title>
 <meta name="description" content="Offline itinerary web app, retro 90s Slavic web vibes, tuned for phones." />
+
+<!-- PWA manifest + icons -->
 <meta name="theme-color" content="#330000">
 <link rel="manifest" href="manifest.webmanifest">
 <link rel="icon" href="icon-192.png" sizes="192x192">
 <link rel="apple-touch-icon" href="icon-192.png">
 
-  <style>
+<style>
 /* === SLAVIC RETRO 90s VIBES, MOBILE-FIRST === */
 html,body{margin:0;padding:0;background:#000;color:#fff;font-family:"Arial Black", Impact, sans-serif;}
 body{background-image: radial-gradient(circle at 50% 10%, rgba(255,0,0,.15), rgba(0,0,0,0) 40%);}
@@ -52,11 +54,6 @@ body{background-image: radial-gradient(circle at 50% 10%, rgba(255,0,0,.15), rgb
 
 *{touch-action:manipulation}
 </style>
-  <link rel="manifest" href="manifest.webmanifest">
-<link rel="icon" href="icon-192.png" sizes="192x192">
-<link rel="apple-touch-icon" href="icon-192.png">
-<meta name="theme-color" content="#330000">
-
 </head>
 <body>
 <div id="app">
@@ -85,12 +82,6 @@ body{background-image: radial-gradient(circle at 50% 10%, rgba(255,0,0,.15), rgb
 </div>
 
 <script>
-  // Register service worker for PWA offline cache
-if ('serviceWorker' in navigator) {
-  window.addEventListener('load', () => {
-    navigator.serviceWorker.register('./sw.js').catch(console.error);
-  });
-}
 // Register service worker for PWA offline cache
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
@@ -100,12 +91,18 @@ if ('serviceWorker' in navigator) {
 
 // === tiny pixel icons (inline SVGs) ===
 const ICONS={
-  beer:`data:image/svg+xml;utf8,${encodeURIComponent(`<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect width='16' height='16' fill='#000'/><rect x='5' y='4' width='6' height='9' fill='#ffcc00'/><rect x='4' y='6' width='1' height='6' fill='#ffffff'/><rect x='5' y='3' width='6' height='1' fill='#ffee88'/><rect x='7' y='5' width='2' height='1' fill='#ffd34d'/></svg>`)}`,
-  vodka:`data:image/svg+xml;utf8,${encodeURIComponent(`<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect width='16' height='16' fill='#000'/><rect x='6' y='2' width='4' height='2' fill='#99d9ea'/><rect x='5' y='4' width='6' height='9' fill='#cfefff'/><rect x='5' y='12' width='6' height='1' fill='#99d9ea'/></svg>`)}`,
-  burek:`data:image/svg+xml;utf8,${encodeURIComponent(`<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect width='16' height='16' fill='#000'/><circle cx='8' cy='8' r='5' fill='#d8a84f'/><path d='M3 8h10' stroke='#b3782a' stroke-width='1'/><path d='M5 10l6-6' stroke='#b3782a' stroke-width='1'/></svg>`)}`,
-  ak:`data:image/svg+xml;utf8,${encodeURIComponent(`<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect width='16' height='16' fill='#000'/><rect x='2' y='7' width='12' height='2' fill='#804000'/><rect x='9' y='6' width='2' height='4' fill='#444'/><rect x='12' y='6' width='2' height='3' fill='#666'/></svg>`)}`,
-  dance:`data:image/svg+xml;utf8,${encodeURIComponent(`<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect width='16' height='16' fill='#000'/><circle cx='8' cy='4' r='2' fill='#ff4081'/><rect x='7' y='6' width='2' height='4' fill='#ff4081'/><rect x='5' y='7' width='2' height='2' fill='#ff4081'/><rect x='9' y='9' width='2' height='2' fill='#ff4081'/></svg>`)}`,
-  taxi:`data:image/svg+xml;utf8,${encodeURIComponent(`<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect width='16' height='16' fill='#000'/><rect x='2' y='7' width='12' height='5' fill='#ffe600'/><rect x='4' y='6' width='3' height='2' fill='#222'/><rect x='9' y='6' width='3' height='2' fill='#222'/><circle cx='5' cy='12' r='1' fill='#333'/><circle cx='11' cy='12' r='1' fill='#333'/></svg>`)}`,
+  beer:`data:image/svg+xml;utf8,${encodeURIComponent(`<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect width='16' height='16' fill='#000'/><rect x='5' y='4' width='6' height='9' fill='#ffcc00'/><rect x='4' y='6' width='1' height='6' fill='#ffffff'/><rect x='5' y='3' width='6' height='1' fill='#ffee88'/><rect x='7' y='5' width='2' height='1' fill='#ffd34d'/></svg>`)}`
+  ,
+  vodka:`data:image/svg+xml;utf8,${encodeURIComponent(`<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect width='16' height='16' fill='#000'/><rect x='6' y='2' width='4' height='2' fill='#99d9ea'/><rect x='5' y='4' width='6' height='9' fill='#cfefff'/><rect x='5' y='12' width='6' height='1' fill='#99d9ea'/></svg>`)}`
+  ,
+  burek:`data:image/svg+xml;utf8,${encodeURIComponent(`<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect width='16' height='16' fill='#000'/><circle cx='8' cy='8' r='5' fill='#d8a84f'/><path d='M3 8h10' stroke='#b3782a' stroke-width='1'/><path d='M5 10l6-6' stroke='#b3782a' stroke-width='1'/></svg>`)}`
+  ,
+  ak:`data:image/svg+xml;utf8,${encodeURIComponent(`<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect width='16' height='16' fill='#000'/><rect x='2' y='7' width='12' height='2' fill='#804000'/><rect x='9' y='6' width='2' height='4' fill='#444'/><rect x='12' y='6' width='2' height='3' fill='#666'/></svg>`)}`
+  ,
+  dance:`data:image/svg+xml;utf8,${encodeURIComponent(`<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect width='16' height='16' fill='#000'/><circle cx='8' cy='4' r='2' fill='#ff4081'/><rect x='7' y='6' width='2' height='4' fill='#ff4081'/><rect x='5' y='7' width='2' height='2' fill='#ff4081'/><rect x='9' y='9' width='2' height='2' fill='#ff4081'/></svg>`)}`
+  ,
+  taxi:`data:image/svg+xml;utf8,${encodeURIComponent(`<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect width='16' height='16' fill='#000'/><rect x='2' y='7' width='12' height='5' fill='#ffe600'/><rect x='4' y='6' width='3' height='2' fill='#222'/><rect x='9' y='6' width='3' height='2' fill='#222'/><circle cx='5' cy='12' r='1' fill='#333'/><circle cx='11' cy='12' r='1' fill='#333'/></svg>`)}`
+  ,
   plane:`data:image/svg+xml;utf8,${encodeURIComponent(`<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect width='16' height='16' fill='#000'/><path d='M2 9l12-3-4 3 4 2-12-2z' fill='#9ad7ff'/></svg>`)}`
 };
 
@@ -121,38 +118,7 @@ function iconFor(it){
   return null;
 }
 
-const PLAN=[
-  {date:'Thu 23/10',label:'Arrival & Warm‑up',items:[
-    {t:'11:30',title:'Meet at airport (CPH)',note:'Group photo now, because later: chaos.'},
-    {t:'13:15–17:30',title:'Fly to Belgrade',note:'Practice saying “Živeli!” (cheers).'},
-    {t:'18:10',title:'Transfer → Villa Saga Paradiso',note:'Claim beds using the ancient “shoe on pillow” ritual.'},
-    {t:'19:30',title:'Taxi downtown & dinner',badge:'Food',note:'Pick: Ambar or Manufaktura.'},
-    {t:'22:00',title:'Oddball bars',badge:'Bar Crawl',note:'Blaznavac → Ljutic → Rakia Bar'}
-  ]},
-  {date:'Fri 24/10',label:'Culture → Craft Beer → Splav',items:[
-    {t:'09:30',title:'Breakfast @ Villa',note:'Coffee, eggs, tactical ibuprofen.'},
-    {t:'11:00–14:00',title:'Yugo Tour',badge:'Weird Culture',note:'Rattly Yugos, brutalist icons, Tito tales.'},
-    {t:'14:30',title:'Late lunch – Kafana ?',badge:'Kafana',note:'Ćevapi, kajmak, rakija.'},
-    {t:'16:30',title:'Walk the center',note:'Knez Mihailova → Kalemegdan (sunset).'},
-    {t:'19:30',title:'Craft Beer Dinner @ Dogma',badge:'Dinner + Beer',note:'Burgers, BBQ, veggie options.'},
-    {t:'21:30',title:'Gunners → Samo Pivo',badge:'Beer Crawl',note:'Curated taps → then the biggest selection.'},
-    {t:'00:00+',title:'Splav: Ona Moja',badge:'Dance',note:'No dress code. Folk band + sing‑alongs.'}
-  ]},
-  {date:'Sat 25/10',label:'Backyard Olympics → Shooting → Skadarlija',items:[
-    {t:'09:00',title:'Breakfast @ Villa',note:'Hydrate. Stretch. Regret nothing.'},
-    {t:'10:00–12:00',title:'Backyard Olympics',badge:'Sports',note:'Swimming relay, 3‑on‑3 hoops, penalties.'},
-    {t:'13:00',title:'Lunch by the river',badge:'Food',note:'Ambar / Frida / Pristan.'},
-    {t:'15:00–17:00',title:'Harborfront hangout / Creative silos',note:'Dorćol & Savamala murals.'},
-    {t:'18:00',title:'Shooting Range',badge:'Bang Bang',note:'AKs, pistols, snipers.'},
-    {t:'20:30 → late',title:'Skadarlija dinner → table party',badge:'Kafana',note:'Tri Šešira or Dva Jelena.'}
-  ]},
-  {date:'Sun 26/10',label:'Chill, Pack, Depart',items:[
-    {t:'09:30',title:'Breakfast & Check‑out',note:'Leave the villa as you wish your liver looked.'},
-    {t:'10:30–13:00',title:'Free play: Zemun / Tesla / Coffee crawl',note:'Votes decide.'},
-    {t:'13:30',title:'Taxi to airport',badge:'Logistics',note:'Kiss the Danube goodbye.'},
-    {t:'17:15–19:35',title:'Flight to Copenhagen',note:'Share photos. Delete some. Keep the legends.'}
-  ]}
-];
+const PLAN=[ /* … same itinerary items … */ ];
 
 let active=0;
 const nav=document.getElementById('nav');
@@ -202,7 +168,6 @@ document.getElementById('dl').onclick = () => {
       toast('Offline copy saved!');
     });
 };
-
 
 function confetti(){
   const N=120; for(let i=0;i<N;i++){const d=document.createElement('div');
